added content to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Photography Portfolio</title>
 </head>
 <body>
-    <!-- Display all images present in the Images folder-->
+    whats up bitches
 </body>
 </html>
