--- a/template.html
+++ b/template.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!--Header menu-->
-    <header>
-        <h1>Matthew Reichard</h1>
+    <div class="header">
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-            </ul>
+            <div class="header-content">
+                <img src="signature.png" alt="Logo" class="logo">
+                <div class="header-buttons">
+                    <a href="index.html" class="button">Home</a></li>
+                    <a href="about.html" class="button">About</a></li>
+                </div>
+            </div>
         </nav>
-    </header>
+    </div>
 
     <!-- Gallery content-->
-     <main>
+     <main id="content">
         <div class="gallery">
             <!--PLACEHOLDER-->
         </div>
