--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <title>Photography Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    whats up bitches
+<body class="homepageimage" style="display: flex;
+  align-items: center;    /* vertical center */
+  justify-content: center; /* horizontal center (optional) */
+  height: 100vh;           /* full viewport height */">
+    
+    <div class="homebanner">
+        <img src="signature.png" alt="Signature Logo" style="width:20%;">
+        <div style="font-weight:300; font-size:3.9vw;">Matthew Reichard</div>
+        <br>
+        <a href="gallery.html" class="button">Gallery</a></li>
+        <a href="about.html" class="button">About</a></li>
+    </div>
 </body>
 </html>
