--- a/template.html
+++ b/template.html
@@ -27,4 +27,14 @@
         </div>
      </main>
 </body>
+
+<script>
+    const allImages = document.images; // This is a live HTMLCollection
+    for (let i = 0; i < allImages.length; i++) {
+        allImages[i].onload = function() {
+            allImages[i].classList.add('loaded');
+            console.log('Image loaded!');
+        };
+    }
+</script>
 </html>
