changed about image to be more optimized

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
      <main id="content">
         <div class="section">
-            <img src="ABOUT.jpg">
+            <img src="ABOUT.webp">
             <div>
                 <div style="font-weight:200; font-size:3.9vw;">Matthew Reichard</div>
                 <div style="font-weight:200; font-size:3.9vw;">Matthew Reichard</div>
