--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
                 <div class="header-buttons">
                     <a href="index.html" class="button">Home</a></li>
                     <a href="gallery.html" class="button">Gallery</a></li>
+                    <link rel="icon" type="image/x-icon" href="favicon.ico">
                 </div>
             </div>
         </nav>
