added new image

--- a/gallery.html
+++ b/gallery.html
@@ -52,9 +52,6 @@
     <a href="Images/PICT0379.webp"><img src="Images/Thumbs/PICT0379.webp" alt="PICT0379.webp" class="image"></a>
 </div>
 <div class="image-container">
-    <a href="Images/DSC01957.webp"><img src="Images/Thumbs/DSC01957.webp" alt="DSC01957.webp" class="image"></a>
-</div>
-<div class="image-container">
     <a href="Images/20240725231033_IMG_3792.webp"><img src="Images/Thumbs/20240725231033_IMG_3792.webp" alt="20240725231033_IMG_3792.webp" class="image"></a>
 </div>
 <div class="image-container">
@@ -64,10 +61,13 @@
     <a href="Images/20230316192237_IMG_7304.webp"><img src="Images/Thumbs/20230316192237_IMG_7304.webp" alt="20230316192237_IMG_7304.webp" class="image"></a>
 </div>
 <div class="image-container">
-    <a href="Images/20240611091105_IMG_3544.webp"><img src="Images/Thumbs/20240611091105_IMG_3544.webp" alt="20240611091105_IMG_3544.webp" class="image"></a>
+    <a href="Images/IMG_8657.webp"><img src="Images/Thumbs/IMG_8657.webp" alt="IMG_8657.webp" class="image"></a>
 </div>
 <div class="image-container">
     <a href="Images/20240325023951_IMG_2827.webp"><img src="Images/Thumbs/20240325023951_IMG_2827.webp" alt="20240325023951_IMG_2827.webp" class="image"></a>
+</div>
+<div class="image-container">
+    <a href="Images/DSC01957.webp"><img src="Images/Thumbs/DSC01957.webp" alt="DSC01957.webp" class="image"></a>
 </div>
 <div class="image-container">
     <a href="Images/DSC00081.webp"><img src="Images/Thumbs/DSC00081.webp" alt="DSC00081.webp" class="image"></a>
@@ -79,7 +79,7 @@
     <a href="Images/PICT0421.webp"><img src="Images/Thumbs/PICT0421.webp" alt="PICT0421.webp" class="image"></a>
 </div>
 <div class="image-container">
-    <a href="Images/IMG_8657.webp"><img src="Images/Thumbs/IMG_8657.webp" alt="IMG_8657.webp" class="image"></a>
+    <a href="Images/20240611091105_IMG_3544.webp"><img src="Images/Thumbs/20240611091105_IMG_3544.webp" alt="20240611091105_IMG_3544.webp" class="image"></a>
 </div>
 <div class="image-container">
     <a href="Images/DSC02527.webp"><img src="Images/Thumbs/DSC02527.webp" alt="DSC02527.webp" class="image"></a>
@@ -151,9 +151,6 @@
     <a href="Images/000267280022.webp"><img src="Images/Thumbs/000267280022.webp" alt="000267280022.webp" class="image"></a>
 </div>
 <div class="image-container">
-    <a href="Images/20230503170955_IMG_7703.webp"><img src="Images/Thumbs/20230503170955_IMG_7703.webp" alt="20230503170955_IMG_7703.webp" class="image"></a>
-</div>
-<div class="image-container">
     <a href="Images/20240326052340_IMG_2949.webp"><img src="Images/Thumbs/20240326052340_IMG_2949.webp" alt="20240326052340_IMG_2949.webp" class="image"></a>
 </div>
 <div class="image-container">
@@ -175,6 +172,9 @@
     <a href="Images/IMG_3946.webp"><img src="Images/Thumbs/IMG_3946.webp" alt="IMG_3946.webp" class="image"></a>
 </div>
 <div class="image-container">
+    <a href="Images/20230503170955_IMG_7703.webp"><img src="Images/Thumbs/20230503170955_IMG_7703.webp" alt="20230503170955_IMG_7703.webp" class="image"></a>
+</div>
+<div class="image-container">
     <a href="Images/IMG_8824.webp"><img src="Images/Thumbs/IMG_8824.webp" alt="IMG_8824.webp" class="image"></a>
 </div>
 <div class="image-container">
@@ -193,16 +193,16 @@
     <a href="Images/000267270023.webp"><img src="Images/Thumbs/000267270023.webp" alt="000267270023.webp" class="image"></a>
 </div>
 <div class="image-container">
+    <a href="Images/20240325025008_IMG_2840.webp"><img src="Images/Thumbs/20240325025008_IMG_2840.webp" alt="20240325025008_IMG_2840.webp" class="image"></a>
+</div>
+<div class="image-container">
     <a href="Images/IMG_8613.webp"><img src="Images/Thumbs/IMG_8613.webp" alt="IMG_8613.webp" class="image"></a>
 </div>
 <div class="image-container">
+    <a href="Images/PICT0394.webp"><img src="Images/Thumbs/PICT0394.webp" alt="PICT0394.webp" class="image"></a>
+</div>
+<div class="image-container">
     <a href="Images/IMG_3376.webp"><img src="Images/Thumbs/IMG_3376.webp" alt="IMG_3376.webp" class="image"></a>
-</div>
-<div class="image-container">
-    <a href="Images/20240324100130_IMG_2739.webp"><img src="Images/Thumbs/20240324100130_IMG_2739.webp" alt="20240324100130_IMG_2739.webp" class="image"></a>
-</div>
-<div class="image-container">
-    <a href="Images/IMG_8845.webp"><img src="Images/Thumbs/IMG_8845.webp" alt="IMG_8845.webp" class="image"></a>
 </div>
 <div class="image-container">
     <a href="Images/L16_00017.webp"><img src="Images/Thumbs/L16_00017.webp" alt="L16_00017.webp" class="image"></a>
@@ -211,28 +211,31 @@
     <a href="Images/IMG_8852.webp"><img src="Images/Thumbs/IMG_8852.webp" alt="IMG_8852.webp" class="image"></a>
 </div>
 <div class="image-container">
-    <a href="Images/DSC02558.webp"><img src="Images/Thumbs/DSC02558.webp" alt="DSC02558.webp" class="image"></a>
-</div>
-<div class="image-container">
-    <a href="Images/20240325025008_IMG_2840.webp"><img src="Images/Thumbs/20240325025008_IMG_2840.webp" alt="20240325025008_IMG_2840.webp" class="image"></a>
-</div>
-<div class="image-container">
     <a href="Images/ReLens-ReLens_Image__2023-05-25_15_38_143000x4000 (1).webp"><img src="Images/Thumbs/ReLens-ReLens_Image__2023-05-25_15_38_143000x4000 (1).webp" alt="ReLens-ReLens_Image__2023-05-25_15_38_143000x4000 (1).webp" class="image"></a>
 </div>
 <div class="image-container">
     <a href="Images/DSC01905.webp"><img src="Images/Thumbs/DSC01905.webp" alt="DSC01905.webp" class="image"></a>
 </div>
 <div class="image-container">
+    <a href="Images/IMG_8845.webp"><img src="Images/Thumbs/IMG_8845.webp" alt="IMG_8845.webp" class="image"></a>
+</div>
+<div class="image-container">
     <a href="Images/20240625022956_IMG_3610.webp"><img src="Images/Thumbs/20240625022956_IMG_3610.webp" alt="20240625022956_IMG_3610.webp" class="image"></a>
+</div>
+<div class="image-container">
+    <a href="Images/DSC02558.webp"><img src="Images/Thumbs/DSC02558.webp" alt="DSC02558.webp" class="image"></a>
 </div>
 <div class="image-container">
     <a href="Images/DSC01934.webp"><img src="Images/Thumbs/DSC01934.webp" alt="DSC01934.webp" class="image"></a>
 </div>
 <div class="image-container">
-    <a href="Images/PICT0394.webp"><img src="Images/Thumbs/PICT0394.webp" alt="PICT0394.webp" class="image"></a>
+    <a href="Images/20240324100130_IMG_2739.webp"><img src="Images/Thumbs/20240324100130_IMG_2739.webp" alt="20240324100130_IMG_2739.webp" class="image"></a>
 </div>
 <div class="image-container">
     <a href="Images/DSC02621.webp"><img src="Images/Thumbs/DSC02621.webp" alt="DSC02621.webp" class="image"></a>
+</div>
+<div class="image-container">
+    <a href="Images/DSC02702-2.webp"><img src="Images/Thumbs/DSC02702-2.webp" alt="DSC02702-2.webp" class="image"></a>
 </div>
 <div class="image-container">
     <a href="Images/IMG_3937.webp"><img src="Images/Thumbs/IMG_3937.webp" alt="IMG_3937.webp" class="image"></a>
